2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/nilfs2.c (grub_nilfs2_super_block): Expand volume_name
	over last_mounted as seen in image generated by mkfs.nilfs2.
	(grub_nilfs2_label): Use sizeof for the size of s_volume_name.

2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c (grub_fat_dir_entry) [MODE_EXFAT]: Expand label
	to 15 UTF-16 characters as seen in FS generated by mkexfatfs.
	(grub_fat_label) [MODE_EXFAT]: Use macros for size.

2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/romfs.c (grub_romfs_mount): Fix a bug with labels going
	over the sector.

2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (get_filesystem_dnode): Support space in
	subvolume name (by removing a bogus and useless check).

2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c (grub_ext2_label): Fix field size. Change to
	sizeof while on it.

2012-01-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/scsi.c (grub_scsi_read_capacity): Renamed to ...
	(grub_scsi_read_capacity10): ... this.
	(grub_scsi_read_capacity16): New function.
	(grub_scsi_open): Use read_capacity16 if read_capacity10 returned
	0xffffffff.
	Fix off-by-one error.
	* include/grub/scsi.h (grub_scsi): Rename size to last_block and make it
	64-bit unsigned.
	* include/grub/scsicmd.h (grub_scsi_read_capacity): Rename to ...
	(grub_scsi_read_capacity10): ... this.
	(grub_scsi_read_capacity_data): Rename to ...
	(grub_scsi_read_capacity10_data): ... this. Rename size to last_block.
	(grub_scsi_read_capacity16): New struct.
	(grub_scsi_read_capacity16_data): Likewise.
	(grub_scsi_cmd_t): Rename grub_scsi_cmd_read_capacity to
	grub_scsi_cmd_read_capacity10.
	New command grub_scsi_cmd_read_capacity16.

2012-01-30  Vladimir Serbinenko  <phcoder@gmail.com>

	SCSI >2TiB support.

	* grub-core/disk/scsi.c (grub_scsi_read16): New function.
	(grub_scsi_write16): Likewise.