@@ -1,5 +1,11 @@
 2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/jfs.c (grub_jfs_sblock): Make volname a char array.
+	Add new member volname2.
+	(grub_jfs_label): Use volname2 if available.
+
+2012-01-31  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/nilfs2.c (grub_nilfs2_super_block): Expand volume_name
 	over last_mounted as seen in image generated by mkfs.nilfs2.
 	(grub_nilfs2_label): Use sizeof for the size of s_volume_name.
